--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "^5.0.1",
-    "@babel/plugin-proposal-private-property-in-object": ""
+    "react-transition-group": "^4.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
